change spaces to . for pp template fix

--- a/New Project 5/project.json
+++ b/New Project 5/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "New Project 5",
+  "name": "New.Project.5",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
